# marinatb

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  access.dock  accounts.dock  api.dock  blueprint.dock  build  builder  builder.dock  db.dock  deploy_deps  genkeys  init  marina.hxx  materialization.dock  test.dock
api/: CMakeLists.txt  README.md  api.cxx
cert/: README.md  access_cert.pem  access_key.pem  accounts_cert.pem  accounts_key.pem  api_cert.pem  api_key.pem  blueprint_cert.pem  blueprint_key.pem  host-dev_cert.pem  host-dev_key.pem  materialization_cert.pem  materialization_key.pem
common/: CMakeLists.txt  README.md
common/net/: CMakeLists.txt  glog.cxx  glog.hxx  http_request.cxx  http_request.hxx  http_server.cxx  http_server.hxx  proto.cxx  proto.hxx
core/: CMakeLists.txt  README.md  access.cxx  accounts.cxx  blueprint-service.cxx  blueprint.cxx  blueprint.hxx  client.cxx  compilation.cxx  compilation.hxx  db.cxx  db.hxx  embed.cxx  embed.hxx  host-control.cxx  mac2ifname.cxx  materialization-service.cxx  materialization.cxx  materialization.hxx  netlink.cxx  topo.cxx  topo.hxx  util.cxx  util.hxx
db/: LICENSE  README.md  marinatb.sql
deb/: .gitignore  deb_build.sh  make_tarball.sh
deb/marinatb-ops/debian/: changelog  control  copyright
debian/: control
example/: edge-a.cxx  hello-marina.cxx  minibed.cxx
host-scripts/: do_config.sh  dpdk_init.sh  ovs_init.sh  ovs_setup.sh  setup_qemu-kvm.sh  test_launch.sh  test_launch2.sh
host-scripts/config/etc/: sysctl.conf
host-scripts/config/etc/default/: grub
host-scripts/config/etc/dpdk/: interfaces
scripts/: 000-default.conf  dnsmasq.conf  ipmi-node-tunnel-sm.sh  ipmi-node-tunnel.sh  minibed_tunnel.sh  mirror.list  mrtb-node-ptunnel.sh  mrtb-node-tunnel.sh  setup-apt-mirror.sh  setup-dnsmasq.sh  wsu_tunnel.sh
scripts/old/: rebuild-ubuntu-mirror.sh  setup-ubuntu-mirror.sh
test/: CMakeLists.txt  README.md
test/api/: CMakeLists.txt  api_test.cxx  blueprint.cxx  materialization.cxx
test/common/: CMakeLists.txt
test/common/net/: http_client_tests.cxx  http_server_tests.cxx
test/core/: CMakeLists.txt  exec.cxx  jsonification.cxx  model_embed.cxx  net.cxx
test/models/: CMakeLists.txt
test/models/blueprints/: blueprints.hxx  hello-marina.cxx  mars.cxx
test/models/topos/: deter2015.cxx  minibed.cxx  topologies.hxx
