#-------------------------------------------------------------------------------
# marinatb-test build file
#
# !!!:
# This build file is designed to be used in conjunction with the marina-builder
# build file @ github.com/marinatb/builder
#
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

add_subdirectory(common)
add_subdirectory(api)
add_subdirectory(core)
add_subdirectory(models)

